--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "amazon-clone",
+    "name": "covid19-comparator",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://btthao.github.io/covid19-comparator",
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
@@ -9,6 +10,7 @@
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.2",
         "firebase": "^8.2.5",
+        "gh-pages": "^3.1.0",
         "moment": "^2.29.1",
         "numeral": "^2.0.6",
         "react": "^17.0.1",
@@ -23,7 +25,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
